@@ -1,6 +1,6 @@
 [Webhost]
 ControlPort=6352
-NetworkInterface=eth0
+NetworkInterface1=eth0
 NtpConfigurationFile=/etc/ntp.conf
 NtpServiceName=ntpd
 ServiceCommand=/usr/bin/wtd
