@@ -2,7 +2,7 @@
 
 Sent via UDP to port 6352 on the localhost.
 
-IP <iface> <ip-addr> <netmask> <gateway> <dns1-addr> <dns2-addr>!
+IP <iface-num> <ip-addr> <netmask> <gateway> <dns1-addr> <dns2-addr>!
 
 NTP <timezone> <ntp1-addr> <ntp2-addr>!
 
