@@ -62,3 +62,6 @@
 2015-12-22 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented the 'WHCgiPost:: ntpAddress()' method in
 	'wh/whcgipost.cpp'.
+2015-12-28 Fred Gleason <fredg@paravelsystems.com>
+	* Modified the 'IP' webroot command to specify interface by number
+	rather than by name.
